--- a/notebooks/answer_sequence_optimizer.ipynb
+++ b/notebooks/answer_sequence_optimizer.ipynb
@@ -14,12 +14,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-26T00:56:25.699466551Z",
-     "start_time": "2024-01-26T00:56:25.669695201Z"
+     "end_time": "2024-01-26T02:19:30.770161141Z",
+     "start_time": "2024-01-26T02:19:30.742863520Z"
     }
    },
    "id": "2cadae66c0158466",
-   "execution_count": 91
+   "execution_count": 133
   },
   {
    "cell_type": "code",
@@ -74,12 +74,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-26T00:56:25.720713273Z",
-     "start_time": "2024-01-26T00:56:25.697791647Z"
+     "end_time": "2024-01-26T02:19:30.772227524Z",
+     "start_time": "2024-01-26T02:19:30.762022632Z"
     }
    },
    "id": "1dc5cf44e3b43ac8",
-   "execution_count": 92
+   "execution_count": 134
   },
   {
    "cell_type": "code",
@@ -118,12 +118,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-26T00:56:25.753337680Z",
-     "start_time": "2024-01-26T00:56:25.745343170Z"
+     "end_time": "2024-01-26T02:19:30.820839372Z",
+     "start_time": "2024-01-26T02:19:30.779375152Z"
     }
    },
    "id": "cc440997538e4cb2",
-   "execution_count": 93
+   "execution_count": 135
   },
   {
    "cell_type": "code",
@@ -143,22 +143,39 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-26T00:56:25.753583789Z",
-     "start_time": "2024-01-26T00:56:25.745453625Z"
+     "end_time": "2024-01-26T02:19:30.821239397Z",
+     "start_time": "2024-01-26T02:19:30.794461059Z"
     }
    },
    "id": "3e836302eb4d0b34",
-   "execution_count": 94
+   "execution_count": 136
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "res = linprog(c, A_ub=A_ub, b_ub=b_ub, A_eq=A_eq, b_eq=b_eq, bounds=bounds, integrality=1)\n",
+    "x_lineprog = res.x"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-26T02:19:30.838625Z",
+     "start_time": "2024-01-26T02:19:30.794613709Z"
+    }
+   },
+   "id": "bea74453c49fc551",
+   "execution_count": 137
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "                 A         B         C         D\nQuestion                                        \n1         1.002018 -0.001265 -0.000381 -0.000371\n2         0.161201  0.669861  0.007475  0.161462\n3         0.255736 -0.001549  0.489815  0.255998\n4        -0.000564 -0.001342 -0.000457  1.002364\n5         1.002018 -0.001265 -0.000381 -0.000371\n6         0.161201  0.669861  0.007475  0.161462\n7         0.255736 -0.001549  0.489815  0.255998\n8        -0.000564 -0.001342 -0.000457  1.002364\n9         1.002018 -0.001265 -0.000381 -0.000371\n10        0.161201  0.669861  0.007475  0.161462",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n      <th>D</th>\n    </tr>\n    <tr>\n      <th>Question</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>1.002018</td>\n      <td>-0.001265</td>\n      <td>-0.000381</td>\n      <td>-0.000371</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.161201</td>\n      <td>0.669861</td>\n      <td>0.007475</td>\n      <td>0.161462</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.255736</td>\n      <td>-0.001549</td>\n      <td>0.489815</td>\n      <td>0.255998</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-0.000564</td>\n      <td>-0.001342</td>\n      <td>-0.000457</td>\n      <td>1.002364</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>1.002018</td>\n      <td>-0.001265</td>\n      <td>-0.000381</td>\n      <td>-0.000371</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>0.161201</td>\n      <td>0.669861</td>\n      <td>0.007475</td>\n      <td>0.161462</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>0.255736</td>\n      <td>-0.001549</td>\n      <td>0.489815</td>\n      <td>0.255998</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>-0.000564</td>\n      <td>-0.001342</td>\n      <td>-0.000457</td>\n      <td>1.002364</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>1.002018</td>\n      <td>-0.001265</td>\n      <td>-0.000381</td>\n      <td>-0.000371</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>0.161201</td>\n      <td>0.669861</td>\n      <td>0.007475</td>\n      <td>0.161462</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "             A     B     C     D\nQuestion                        \n1         1.00 -0.00 -0.00 -0.00\n2         0.16  0.67  0.01  0.16\n3         0.26 -0.00  0.49  0.26\n4        -0.00 -0.00 -0.00  1.00\n5         1.00 -0.00 -0.00 -0.00\n6         0.16  0.67  0.01  0.16\n7         0.26 -0.00  0.49  0.26\n8        -0.00 -0.00 -0.00  1.00\n9         1.00 -0.00 -0.00 -0.00\n10        0.16  0.67  0.01  0.16",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n      <th>D</th>\n    </tr>\n    <tr>\n      <th>Question</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>1.00</td>\n      <td>-0.00</td>\n      <td>-0.00</td>\n      <td>-0.00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.16</td>\n      <td>0.67</td>\n      <td>0.01</td>\n      <td>0.16</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.26</td>\n      <td>-0.00</td>\n      <td>0.49</td>\n      <td>0.26</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-0.00</td>\n      <td>-0.00</td>\n      <td>-0.00</td>\n      <td>1.00</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>1.00</td>\n      <td>-0.00</td>\n      <td>-0.00</td>\n      <td>-0.00</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>0.16</td>\n      <td>0.67</td>\n      <td>0.01</td>\n      <td>0.16</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>0.26</td>\n      <td>-0.00</td>\n      <td>0.49</td>\n      <td>0.26</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>-0.00</td>\n      <td>-0.00</td>\n      <td>-0.00</td>\n      <td>1.00</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>1.00</td>\n      <td>-0.00</td>\n      <td>-0.00</td>\n      <td>-0.00</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>0.16</td>\n      <td>0.67</td>\n      <td>0.01</td>\n      <td>0.16</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 95,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,17 +186,48 @@
     "df = pd.DataFrame(data, columns=['A', 'B', 'C', 'D'])\n",
     "df.index += 1\n",
     "df.index.name = 'Question'\n",
-    "df"
+    "df.round(2)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-26T00:56:25.754114944Z",
-     "start_time": "2024-01-26T00:56:25.745506406Z"
+     "end_time": "2024-01-26T02:19:30.864053661Z",
+     "start_time": "2024-01-26T02:19:30.821007040Z"
     }
    },
    "id": "60d267360275ff07",
-   "execution_count": 95
+   "execution_count": 138
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "            A    B    C    D\nQuestion                    \n1         1.0  0.0  0.0  0.0\n2        -0.0  1.0  0.0 -0.0\n3        -0.0  0.0  1.0  0.0\n4         0.0  0.0  0.0  1.0\n5         1.0  0.0  0.0  0.0\n6         1.0  0.0  0.0  0.0\n7        -0.0  0.0  0.0  1.0\n8         0.0  0.0  0.0  1.0\n9         1.0  0.0  0.0  0.0\n10       -0.0  1.0  0.0 -0.0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n      <th>D</th>\n    </tr>\n    <tr>\n      <th>Question</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>-0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>-0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>-0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>-0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Show results\n",
+    "data = x_lineprog[:(n_letters * n_questions)].reshape(n_questions, n_letters)\n",
+    "df = pd.DataFrame(data, columns=['A', 'B', 'C', 'D'])\n",
+    "df.index += 1\n",
+    "df.index.name = 'Question'\n",
+    "df.round(2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-26T02:19:30.864785262Z",
+     "start_time": "2024-01-26T02:19:30.862928235Z"
+    }
+   },
+   "id": "ab1b45cfbaa0d2d5",
+   "execution_count": 139
   }
  ],
  "metadata": {
